增加批量转办功能-增强